# mlogv32

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  console.sh  link.x  nodemon.json  pyproject.toml
.devcontainer/: devcontainer.json  postAttachCommand.sh
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/toolchain/: Dockerfile
.github/workflows/: devcontainer.yml  mod.yml  toolchain.yml
asm/: amo.s  branch.s  div.s  large_bin.s  load.s  math.s  mul.s  print.s  stimer.s  store.s  system.s  timer.s  trap.s
coremark/: compile_flags.txt
coremark/mlogv32/: core_portme.c  core_portme.h  core_portme.mak  cvt.c  ecall.c  ecall.h  ee_printf.c  entry.s  xmlogsys.c  xmlogsys.h
js/: loader.js
linux/: Makefile  README.md  host_ppp_options
linux/buildroot/: .clangd  Config.in  external.desc  external.mk
linux/buildroot/board/mlogv32/: busybox.config  device_table.txt  linux.config
linux/buildroot/board/mlogv32/dts/: mlogv32.dtb  mlogv32.dts
linux/buildroot/board/mlogv32/overlay/etc/ppp/: ip-down  ip-up  options
linux/buildroot/board/mlogv32/zsbl/: zsbl.S  zsbl.ld
linux/buildroot/configs/: mlogv32_defconfig
linux/buildroot/linux/: Config.ext.in  linux-ext-mlogv32-drivers.mk
linux/buildroot/opensbi/: compile_flags.txt
linux/buildroot/opensbi/platform/mlogv32/: Kconfig  objects.mk  platform.c  uart16550.c  uart16550.h
linux/buildroot/opensbi/platform/mlogv32/configs/: defconfig
linux/buildroot/package/mlogv32-drivers/: Config.in  mlogv32-drivers.mk
linux/buildroot/package/mlogv32-drivers/src/: Makefile  irq-mlogv32-intc.c
linux/buildroot/patches/linux/: 0001-Add-CONFIG_XIP_KERNEL-case-for-RV32-trampoline-setup.patch  0001-Add-sbi_debug_console_read-support-to-SBI-earlycon.patch  0002-Fix-incorrect-RV32-XIP-linear-mapping.patch  0002-Hack-remove-contents-of-flush_icache_pte.patch  0003-Add-fifo-size-OF-property-for-uartlite-driver.patch  0003-Map-RV32-XIP-flash-in-setup_vm_final.patch
micropython/: compile_flags.txt  repl.sh
micropython/mlogv32/: Makefile  entry.s  init.c  link.x  main.c  mpconfigport.h  mphalport.c  uart.h
mod/: .gitignore  README.md  build.gradle.kts  mod.hjson  package.json  settings.gradle.kts  tsconfig.json
mod/assets/scripts/: main.js
mod/gradle/: libs.versions.toml
mod/scripts/: main.js
mod/src/main/kotlin/gay/object/mlogv32/: Mlogv32UtilsMod.kt  ProcessorAccess.kt  UartAccess.kt
mod/types/: global.d.ts
python/src/mlogv32/: __init__.py  processor_access.py
python/src/mlogv32/preprocessor/: __init__.py  app.py  constants.py  extensions.py  filters.py  models.py  types.py
python/src/mlogv32/preprocessor/parser/: __init__.py  mlog.lark  mlog.py
python/src/mlogv32/scripts/: bin_to_mlog.py  debug.py  logicids.py  ram_proc.py  terminal_server.py
python/src/mlogv32/utils/: msch.py
riscof/: .gitignore  Makefile  config.ini  filter_test_list.py
riscof/mlogv32/: mlogv32_isa.yaml  mlogv32_platform.yaml  riscof_mlogv32.py
riscof/mlogv32/env/: link.ld  model_test.h  reloc.ld  xip.ld
riscof/sail_cSim/: riscof_sail_cSim.py
riscof/sail_cSim/env/: model_test.h  sail_config.json
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/demo_no_alloc/: Cargo.toml
rust/demo_no_alloc/.cargo/: config.toml
rust/demo_no_alloc/src/: main.rs
rust/examples/demo/: Cargo.toml
rust/examples/demo/src/: main.rs
rust/examples/ppp/: Cargo.toml  README.md
rust/examples/ppp/src/: main.rs
rust/examples/sortKB/: Cargo.toml
rust/examples/sortKB/src/: main.rs
rust/examples/timer/: Cargo.toml
rust/examples/timer/src/: main.rs
rust/examples/webserver/: Cargo.toml  README.md  build.rs  memory.x
rust/examples/webserver/src/: lib.rs  main.rs
rust/mlogv32/: Cargo.toml  build.rs  link.x  memory.x  rust-toolchain.toml
rust/mlogv32-embassy/: Cargo.toml
rust/mlogv32-embassy/src/: lib.rs  timer.rs
rust/mlogv32/.cargo/: config.toml
rust/mlogv32/src/: asm.rs  constants.rs  graphics.rs  io.rs  lib.rs  panic_handler.rs  prelude.rs
rust/ppp/: Cargo.toml  README.md
rust/ppp/.cargo/: config.toml
rust/ppp/src/: main.rs
rust/sortKB/: Cargo.toml
rust/sortKB/src/: main.rs
schematics/: lookup_procs.msch  ram_proc.msch  sortKB.msch
scripts/: bin_to_mlog.py  bin_to_msch.py  dump.py  logicids.py  ram_proc.py
server/config/maps/: empty.msav
src/: config.mlog  debugger.mlog  debugger.mlog.jinja  decoder.mlog  init.mlog.jinja  init_incr_proc.mlog  kbconv.mlog  main.constants.jinja  main.mlog  main.mlog.jinja  proc_bank.mlog  proc_bank_access.mlog  ram_disabler.mlog  ram_proc_access.mlog  registers.mlog
src/config/: base.mlog.jinja  configs.yaml  riscv-arch-test.mlog
src/cpu/: config.yaml  constants.jinja  controller.mlog.jinja  cpu.yaml  instructions.yaml  worker.mlog.jinja
src/macros/: bits.jinja
src/memory/: ram_proc.mlog
src/peripherals/: debugger.mlog.jinja  display.mlog  kbconv.mlog  scrolling_display.mlog.jinja  uart_link.mlog
src/tools/: memory.mlog  registers.mlog
