[package]
name = "mlogv32"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.7.0"
riscv = "0.12.1"
uart = "2.1.1"
critical-section = { version = "1.2.0", features = ["restore-state-none"], optional = true }
embedded-alloc = { version = "0.6.0", optional = true }

[features]
alloc = ["dep:critical-section", "dep:embedded-alloc"]
