[package]
name = "mlogv32"
version = "0.1.0"
edition = "2024"

[dependencies]
bitbybit = { workspace = true }
derive-mmio = { workspace = true }
embassy-futures = { workspace = true }
embassy-hal-internal = "0.2.0"
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
riscv = { workspace = true }
riscv-rt = { workspace = true }

[features]
default = ["panic-handler"]
panic-handler = []
default-memory = []
